# cdm-cli

./: .gitignore  LICENSE  README.md  app.py  cdm.py  pyproject.toml
cdm/: chapter.py  exeptions.py  manga.py  page.py
cdm/finder/: __init__.py
cdm_cli/: cli.py  finder.py
cdmdownloader/: chapter.py  exeptions.py  finder.py  manga.py
tests/: test_cdmdownloader.py
