[tool.poetry]
name = "cdm_cli"
version = "0.1.1"
description = "A CLI for search and download mangas form the CDM website"
authors = ["Cleyson Lima <cleysonph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
autopep8 = "^1.5.1"
requests-cache = "^0.5.2"
bpython = "^0.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
cdm = "cdm_cli.cli:cli"